@@ -4,6 +4,9 @@
 
 
 0.76-tobe
+    - if only one dist is found, directly redirect to overview page
+    - search dist now case insensitive
+    - actived JSON dist dependencies view (marcus.ramberg)
     - added kwalitee_overview.png
     - added by/*_kwalitee to stats (requested by Tux)
 
